--- a/EmployeeForm/Web.config
+++ b/EmployeeForm/Web.config
@@ -8,6 +8,9 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
+	<connectionStrings>
+		<add name="CompanyContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EmployeeForm1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
