--- a/EmployeeForm/Web.config
+++ b/EmployeeForm/Web.config
@@ -9,7 +9,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
 	<connectionStrings>
-		<add name="CompanyContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EmployeeForm1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+		<add name="CompanyContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EmployeeForm1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -49,7 +49,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -60,7 +60,12 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <providers>
+	  <contexts>
+		  <context type="EmployeeForm.DAL.CompanyContext, EmployeeForm">
+			  <databaseInitializer type="EmployeeForm.DAL.CompanyInitializer, EmployeeForm"/>
+		  </context>
+	  </contexts>
+	  <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
