--- a/EmployeeForm.Repository/EmployeeForm.Repository.csproj
+++ b/EmployeeForm.Repository/EmployeeForm.Repository.csproj
@@ -51,8 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseFactory.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="GenericRepository.cs" />
+    <Compile Include="IDatabaseFactory.cs" />
     <Compile Include="IEmployeeRepository.cs" />
     <Compile Include="IGenericRepository.cs" />
     <Compile Include="ISkillRepository.cs" />
