--- a/EmployeeForm/Web.config
+++ b/EmployeeForm/Web.config
@@ -9,7 +9,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
 	<connectionStrings>
-		<add name="CompanyContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EmployeeForm2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+		<add name="CompanyContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EmployeeForm4;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -61,8 +61,8 @@
   </system.codedom>
   <entityFramework>
 	  <contexts>
-		  <context type="EmployeeForm.DAL.CompanyContext, EmployeeForm">
-			  <databaseInitializer type="EmployeeForm.DAL.CompanyInitializer, EmployeeForm"/>
+		  <context type="EmployeeForm.Model.CompanyContext, EmployeeForm.Model">
+			  <databaseInitializer type="EmployeeForm.Model.CompanyInitializer, EmployeeForm.Model" />
 		  </context>
 	  </contexts>
 	  <providers>
